# taylormade

./: README.md  pyproject.toml  run.py
src/taylormade/: __init__.py  app.py
src/taylormade/desktop/: home_page.py
src/taylormade/mobile/: home_page.py
src/taylormade/templates/: base.html
